--- a/styles/film.css
+++ b/styles/film.css
@@ -1,20 +1,3 @@
-.filmContainer {
-  background-color: cornflowerblue;
-  border-radius: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  min-width: 40%;
-  margin: 1rem;
-  padding: 2rem;
-}
-
 .filmFlexContainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -27,5 +10,48 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.filmContainer {
+  background-color: red;
+  border-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin: 1rem;
+  padding: 1rem;
+  min-width: 22rem;
+}
+
+.imageContainer {
+  max-width: 14rem;
+  margin: 0 auto;
+}
+
+.searchInput {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 2rem 1rem;
+  margin: 0 2rem;
+  font-size: 2rem;
+}
+
+.searchInputField {
+  font-size: 2rem;
+  text-indent: 6px;
 }
 /*# sourceMappingURL=film.css.map */
