--- a/styles/film.scss
+++ b/styles/film.scss
@@ -1,24 +1,49 @@
-.filmContainer {
-  //   border: 2px solid red;
-  background-color: cornflowerblue;
-  border-radius: 2rem;
-
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-
-  min-width: 40%;
-
-  margin: 1rem;
-  padding: 2rem;
-}
-
 .filmFlexContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+
+  max-width: 100%;
+  // background-color: blue;
+
+  margin: 0 auto;
 }
 
-.navbar {
+.filmContainer {
+  background-color: red;
+  border-radius: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+
+  text-align: center;
+
+  margin: 1rem;
+  padding: 1rem;
+  min-width: 22rem;
+}
+
+.imageContainer {
+  max-width: 14rem;
+  margin: 0 auto;
+}
+
+.searchInput {
+  // background-color: green;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 2rem 1rem;
+  margin: 0 2rem;
+
+  font-size: 2rem;
+}
+
+.searchInputField {
+  font-size: 2rem;
+  text-indent: 6px;
 }
