Card CSS and backgorund image added

--- a/styles/film.css
+++ b/styles/film.css
@@ -15,7 +15,9 @@
 }
 
 .filmContainer {
-  background-color: red;
+  background-image: url(../public/cardbackground.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -24,10 +26,27 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: aqua;
   margin: 1rem;
   padding: 1rem;
+  height: 32rem;
   min-width: 22rem;
+}
+
+.filmContainer h1 {
+  margin-top: 2rem;
+}
+
+.filmContainer .filmContent {
+  margin: 2.5rem auto 1rem;
+  font-size: 1rem;
 }
 
 .imageContainer {
@@ -46,8 +65,14 @@
       -ms-flex-pack: center;
           justify-content: center;
   padding: 0 2rem 1rem;
-  margin: 0 2rem;
+  margin: 2rem;
   font-size: 2rem;
+  color: #fff;
+}
+
+.searchInput:active {
+  outline: none;
+  text-decoration: none;
 }
 
 .searchInputField {
