--- a/styles/film.scss
+++ b/styles/film.scss
@@ -11,18 +11,32 @@
 }
 
 .filmContainer {
-  background-color: red;
+  // Back ground
+  background-image: url(../public/cardbackground.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 1rem;
 
   display: flex;
   flex-direction: column;
-  // justify-content: center;
-
+  justify-content: center;
   text-align: center;
+  align-items: center;
 
+  color: aqua;
   margin: 1rem;
   padding: 1rem;
+  height: 32rem;
   min-width: 22rem;
+
+  h1 {
+    margin-top: 2rem;
+  }
+
+  .filmContent {
+    margin: 2.5rem auto 1rem;
+    font-size: 1rem;
+  }
 }
 
 .imageContainer {
@@ -38,9 +52,15 @@
   justify-content: center;
 
   padding: 0 2rem 1rem;
-  margin: 0 2rem;
+  margin: 2rem;
 
   font-size: 2rem;
+  color: #fff;
+}
+
+.searchInput:active {
+  outline: none;
+  text-decoration: none;
 }
 
 .searchInputField {
