--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,6 @@
 
 body {
   background: #f2f2f2;
-  color: #333;
   font-family: "Nunito";
   background-color: #ff9d00;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
@@ -17,7 +16,7 @@ body {
 }
 
 a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -27,7 +26,8 @@ a {
 }
 
 nav {
-  margin: 10px auto 20px;
+  font-size: 2rem;
+  margin: 10px 20px;
   padding: 10px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -38,11 +38,17 @@ nav {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px solid #ddd;
 }
 
 nav a {
-  margin-left: 12px;
+  margin-left: 2.5rem;
+}
+
+nav a:hover {
+  font-weight: bold;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 nav .logo {
@@ -66,5 +72,9 @@ footer {
 
 .footer {
   margin: 4rem 0 2rem;
+}
+
+.primary {
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
