--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,7 +11,6 @@
 
 body {
   background: #f2f2f2;
-  color: #333;
   font-family: "Nunito";
 
   // Cool background
@@ -20,8 +19,9 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
 a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 .content {
@@ -29,20 +29,32 @@ a {
   margin: 0 auto;
   // background-color: yellow;
 }
+
+// Nav
 nav {
-  margin: 10px auto 20px;
+  font-size: 2rem;
+  margin: 10px 20px;
   padding: 10px 0;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px solid #ddd;
 }
+
 nav a {
-  margin-left: 12px;
+  margin-left: 2.5rem;
 }
+
+nav a:hover {
+  font-weight: bold;
+  transform: scale(1.3);
+}
+
 nav .logo {
   margin-right: auto;
 }
+
+// Footer
 footer {
   display: block;
   text-align: center;
@@ -61,4 +73,10 @@ footer {
 // Footer Styles
 .footer {
   margin: 4rem 0 2rem;
+}
+
+// Universal Colour
+
+.primary {
+  color: #fff;
 }
