--- a/styles/film.scss
+++ b/styles/film.scss
@@ -23,18 +23,26 @@
   text-align: center;
   align-items: center;
 
-  color: aqua;
+  color: rgba(0, 0, 0, 0.8);
   margin: 1rem;
   padding: 1rem;
   height: 32rem;
   min-width: 22rem;
 
   h1 {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
+  }
+
+  a {
+    color: rgba(0, 0, 0, 0.8);
+  }
+
+  a:hover {
+    font-style: italic;
   }
 
   .filmContent {
-    margin: 2.5rem auto 1rem;
+    margin: 1rem auto 0.1rem;
     font-size: 1rem;
   }
 }
@@ -52,18 +60,21 @@
   justify-content: center;
 
   padding: 0 2rem 1rem;
-  margin: 2rem;
+  margin: 2rem auto 0.6rem;
 
   font-size: 2rem;
   color: #fff;
 }
 
-.searchInput:active {
-  outline: none;
-  text-decoration: none;
-}
-
 .searchInputField {
   font-size: 2rem;
-  text-indent: 6px;
+  text-indent: 14px;
+  line-height: 3rem;
+  border-radius: 12px;
+  border: none;
+  margin-left: 1.1rem;
+}
+
+.searchInputField:focus {
+  outline: none;
 }
