--- a/styles/film.css
+++ b/styles/film.css
@@ -62,6 +62,12 @@
   margin: 0 auto;
 }
 
+.imageContainerProfile {
+  max-width: 14rem;
+  margin: 0 auto 2rem;
+  border-radius: 50%;
+}
+
 .searchInput {
   display: -webkit-box;
   display: -ms-flexbox;
