--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ a {
 .content {
   max-width: 1400px;
   margin: 0 auto;
+  padding: 2rem;
 }
 
 nav {
@@ -32,26 +33,38 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
   border-bottom: 2px solid #ddd;
 }
 
 nav a {
   margin-left: 2.5rem;
+  color: #fff;
+  font-weight: 800;
 }
 
 nav a:hover {
   font-weight: bold;
   -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  transform: scale(1.3);
+  color: #ffa835;
 }
 
 nav .logo {
   margin-right: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .logo {
+    display: none;
+  }
+  .title {
+    margin: 2rem auto;
+  }
 }
 
 footer {
@@ -64,13 +77,21 @@ footer {
 }
 
 /* For Footer github link */
-.footer a {
-  color: #4979ff;
-  text-decoration: underline;
+.footer {
+  position: static;
+  bottom: 2rem;
+  margin: 2rem auto;
 }
 
-.footer {
-  margin: 4rem 0 2rem;
+.footer a {
+  color: #ec8600;
+}
+
+.footer a:hover {
+  color: #ff9a16;
+  border-bottom: 1px solid #ec8600;
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .primary {
@@ -79,5 +100,20 @@ footer {
 
 .noDisplay {
   display: none;
+}
+
+.gitLink {
+  font-weight: 400;
+  color: #d3d300;
+}
+
+.gitLink:hover {
+  border-bottom: 1px solid #ffff57;
+  font-weight: 600;
+  color: #ffff57;
+}
+
+.textContent p {
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
